fix: replace pattern matching and text blocks with Java 8 compatible code